# PDA-API

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1b8bb4d20971_create_documents_table.py  50f0f0555ef4_initial_empty_schema.py  93f56f34f1ae_create_document_chunks_table.py  a1c3e5b7d9f0_backfill_image_jpg_allowed_file_types.py  (+3 more)
app/: main.py
pda_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_contract.py  test_app.py  test_app_settings_migration.py  test_app_settings_model.py  test_app_settings_schema.py  test_chunking_service.py  test_config.py  test_db.py  test_document_chunk_migration.py  test_document_chunk_model.py  test_document_chunk_schema.py  test_document_delete.py  test_document_download.py  test_document_list_detail.py  test_document_model.py  test_document_reprocess.py  test_document_schema.py  test_document_update.py  test_document_upload.py  test_embedding_providers.py  test_embedding_service.py  test_health.py  test_ocr_adapters.py  test_ocr_service.py  test_openapi_contract.py  test_pgvector_postgres_integration.py  test_processing_chunking.py  test_processing_embeddings.py  test_processing_job_migration.py  test_processing_job_model.py  test_processing_job_schema.py  test_processing_job_status.py  test_processing_orchestrator.py  test_processing_text_normalization.py  test_status_enums.py  test_text_extraction.py  test_text_normalization.py  test_vector_search_service.py  test_vector_validation.py
(+55 files in other folders)
