[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pda-api"
version = "0.1.0"
description = "PDA FastAPI backend skeleton"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
